--- a/Proj4.ipynb
+++ b/Proj4.ipynb
@@ -84,8 +84,6 @@
     "            y[j,i]= (y[j,i - 1] - y[j + 1,i - 1]) / (x[j] - x[i + j]) \n",
     " \n",
     "def NewtonDividedDifference(value,x,y,n): \n",
-    "#     print('x',x)\n",
-    "#     print('y',y)\n",
     "    sum = y[0,0] \n",
     "    for i in range(1, n):\n",
     "        sum = sum + (productTerm(i, value, x) * y[0,i]) \n",
@@ -210,10 +208,7 @@
     "    p=''\n",
     "    for i in range(1, n):\n",
     "        temp=y[0,i]       \n",
-    "#         print(temp)\n",
-    "        p=productTerm_string(i,w)\n",
-    "#         print(p)\n",
-    "#         s = s +\"+\"+ p+ \"*\" + '('+ str(temp)+')' \n",
+    "        p=productTerm_string(i,w) \n",
     "        s = s +\"+\"+ p + '('+ str(temp)+')' \n",
     "        \n",
     "    return s \n",
@@ -259,14 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n",
       "difference at 33 separte points: [0.0936294988557597, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549, 0.0290164352738549]\n"
      ]
     },
@@ -280,7 +274,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +331,7 @@
     "        sum = sum + (productTerm(i, value, x) * y[0,i]) \n",
     "    return sum \n",
     "def main():\n",
-    "    print('hello world')\n",
+    "#     print('hello world')\n",
     "    #assumption polynomial is degree the one constructed with 11 terms [0,6]\n",
     "    #difference between the polynomial and the function at 33 equally spaced points in the interval [0,8]\n",
     "    \n",
@@ -370,6 +364,82 @@
     "    return 0\n",
     "\n",
     "main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Problem 2 (3 pts) Let f (x) = max{0, 1, −x}. Sketch the function f . Then find interpolating polynomials p of degrees 2, 4, 8, 16, and 32 to f on the interval [-4,4], using equally spaced nodes. Calculate the discrepancy f(x) − p(x) at 64 equally spaced points for each p and plot it. Then redo the problem using Chebyshev nodes. Compare."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-80-077449e48b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m  \u001b[0;31m#plot(p,(x,0,4),xlabel=’x’,ylabel=’y’,title=’Intepolating polynomial for (0,-2), (2,1), (4,4)’)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m  \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-80-077449e48b96>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m  \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m  \u001b[0;31m#plot(p,(x,0,4),xlabel=’x’,ylabel=’y’,title=’Intepolating polynomial for (0,-2), (2,1), (4,4)’)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m  \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sympy/plotting/plot.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1289\u001b[0m     \u001b[0mseries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1290\u001b[0m     \u001b[0mplot_expr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_arguments\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1291\u001b[0;31m     \u001b[0mseries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mLineOver1DRangeSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mplot_expr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1292\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1293\u001b[0m     \u001b[0mplots\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    x=x*(-1)\n",
+    "    return max(0, 1, x)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    " k=[]\n",
+    " y=[]\n",
+    " for i in range (-100,100):\n",
+    "   k.append(f(i))\n",
+    "   y.append(i)\n",
+    " print(x)\n",
+    " #plot(p,(x,0,4),xlabel=’x’,ylabel=’y’,title=’Intepolating polynomial for (0,-2), (2,1), (4,4)’)\n",
+    " plot(k, y)  \n",
+    "main()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
