--- a/Proj4.ipynb
+++ b/Proj4.ipynb
@@ -98,13 +98,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Prolem 1: Find the polynomial of degree 10 that interpolates the function arctan x at 11 equally spaced points in the interval [1,6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +132,7 @@
        "6⋅x - 0.0936294988557575"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "realyvalues output [0.0, 0.23783592745745075, 0.45145309155255431, 0.62879628641543295, 0.77001476161685323, 0.88099628206128866, 0.96850898065993241, 1.0382922284930458, 1.0947269964721353, 1.1410340476982079, 1.1795607476677223, 1.2120256565243244, 1.2397002500907643, 1.2635375114637544, 1.2842615598373017, 1.3024301158889897, 1.3184783459084692, 1.3327499616301144, 1.3455195475808412, 1.3570087926370105, 1.3673984380695425, 1.3768371795350034, 1.3854483767992019, 1.3933351669359968, 1.400584401509422, 1.4072697079739034, 1.41345389206132, 1.4191908393566237, 1.4245270327186352, 1.4295027724192153, 1.4341531643038095, 1.4385089255010606, 1.4425970455635984]\n"
+      "diffs: [-0.093629498855757498, -0.029016435273853586, -0.0067801695146522678, -0.0010229027955719339, -2.5396883236328271e-05, 2.5526651098006781e-05, -6.6613381477509392e-16, -2.6693240513520067e-06, 2.4169797874229459e-07, 5.5808495758036258e-07, -1.3803247878030334e-07, -1.9251866367753223e-07, 9.620486629557945e-08, 1.0016641982524277e-07, -9.2020687292304615e-08, -7.4547628070575911e-08, 1.2560967577179838e-07, 7.5609929428566147e-08, -2.5561252270378532e-07, -9.2090330472416326e-08, 8.4102444475320226e-07, 2.2204460492503131e-16, -5.4005877421214876e-06, 4.3794718580514314e-06, 0.00014443095242966386, 0.00079866536751249662, 0.0029723490323052548, 0.0089380159803891246, 0.023333987195371719, 0.054929600456944394, 0.11933704277219559, 0.24302732121823101, 0.46909835265987088]\n"
      ]
     },
     {
@@ -249,7 +254,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +308,6 @@
     "    xvalues=[]\n",
     "    realyvalues=[]\n",
     "    fillactual(f,a,b,n,realyvalues,xvalues)\n",
-    "    print('realyvalues output',realyvalues)\n",
     "    for i in range(n):\n",
     "        x=xvalues[i]\n",
     "        aprox = eval(expr)\n",
@@ -348,10 +352,18 @@
     "\n",
     "    diff=[]\n",
     "    getdifs_expr(arctan,expr,a,b,n,diff)\n",
+    "    print(\"diffs:\",diff)\n",
     "    \n",
     "    return 0\n",
     "\n",
     "main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What conclusion can be drawn? Numerically we can see that the interpolation can be very accurate within the range that the interpolating polynomial is constructed and becomes increasingly un-accurate outside the bound in which it was constructed"
    ]
   },
   {
